--- a/debugging_with_pdb/pdb.html
+++ b/debugging_with_pdb/pdb.html
@@ -13144,6 +13144,14 @@ or use another debugger with PYTHONBREAKPOINT=ipdb.set_trace</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<p>Behave captures stdout, so you won't see pdb output, but there's a simple fix: <code>--no-capture</code></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <p>I could do a demo in ipython, but the callstack is a little cluttered and scrolling doesn't work well, so let's start the live demo in terminal.</p>
 
 </div>
@@ -13170,9 +13178,22 @@ or use another debugger with PYTHONBREAKPOINT=ipdb.set_trace</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="Extra:-how-to-install-pip-package-in-docker-image-without-rebuilding">Extra: how to install pip package in docker image without rebuilding<a class="anchor-link" href="#Extra:-how-to-install-pip-package-in-docker-image-without-rebuilding">&#182;</a></h2><ul>
+<li>run the image</li>
+<li>if you're not root, attach new console as root: <shell><code>docker exec -it -u 0 987dc2a426ff bash</code></li>
+<li><shell><code>pip install pudb</code></li>
+<li>commit the container: <shell><code>docker commit 987dc2a426ff swdl/aosp:latest</code></li>
+</ul>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="There-are-a-lot-of-pdb-flavours:">There are a lot of pdb flavours:<a class="anchor-link" href="#There-are-a-lot-of-pdb-flavours:">&#182;</a></h2><ul>
 <li>ipdb -&gt; pdb with ipython shell</li>
-<li>pubd -&gt; ncurses version</li>
+<li>pudb -&gt; ncurses version</li>
 </ul>
 
 </div>
@@ -13223,7 +13244,7 @@ or use another debugger with PYTHONBREAKPOINT=ipdb.set_trace</p>
 </div>
 <div class="cell border-box-sizing code_cell rendered">
 <div class="input">
-<div class="prompt input_prompt">In&nbsp;[15]:</div>
+<div class="prompt input_prompt">In&nbsp;[1]:</div>
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="o">%%HTML</span>
@@ -13258,10 +13279,44 @@ or use another debugger with PYTHONBREAKPOINT=ipdb.set_trace</p>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="remote-pdb-&lt;--for-really-pdb-hostile-environments,-like-no-TTY">remote-pdb &lt;- for really pdb-hostile environments, like no TTY<a class="anchor-link" href="#remote-pdb-&lt;--for-really-pdb-hostile-environments,-like-no-TTY">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p><python><code>import rpdb; rpdb.set_trace()</code></p>
+<p><shell><code>$ nc 127.0.0.1 4444</code></p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="django-pdb">django-pdb<a class="anchor-link" href="#django-pdb">&#182;</a></h2>
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<h2 id="pytest">pytest<a class="anchor-link" href="#pytest">&#182;</a></h2><p><shell><code>pytest --pdb</code> &lt;- lands in pdb on test failure</p>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h2 id="Best-practice">Best practice<a class="anchor-link" href="#Best-practice">&#182;</a></h2><ul>
 <li>most of the time you're probably better off with your IDE/editor debugger</li>
-<li>use something pdb-ish when it's hard to integrate IDE/editor debugger or integration is not worth the effort</li>
+<li>use something pdb-ish when<ul>
+<li>it's hard/impossible to integrate IDE/editor debugger or integration is not worth the effort</li>
 <li>your editor can't debug python code</li>
+</ul>
+</li>
 </ul>
 
 </div>
